# serializer version: 1
# name: test_environ_is_passed_to_rattler_build
  list([
    dict({
      'about': dict({
      }),
      'build': dict({
        'skip': list([
          "env.get('TEST_SHOULD_BE_PASSED') == 'false'",
        ]),
      }),
      'extra': dict({
        'final': True,
      }),
      'package': dict({
        'name': 'py-test',
        'version': '1.0.0',
      }),
      'requirements': dict({
        'build': list([
          'c_compiler_stub',
          'cuda_compiler_stub',
        ]),
        'host': list([
          'python',
        ]),
        'run': list([
          'python',
        ]),
      }),
    }),
  ])
# ---
# name: test_environ_is_passed_to_rattler_build.1
  dict({
    'target_platform': 'linux-64',
  })
# ---
# name: test_render_recipe
  list([
    dict({
      'python': '3.8.* *_cpython',
      'target_platform': 'linux-64',
    }),
    dict({
      'python': '3.9.* *_cpython',
      'target_platform': 'linux-64',
    }),
  ])
# ---
